--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<ejs-gantt height="490px"></ejs-gantt>
+
+<!--  -->
+<ejs-gantt
+  width="50%"
+           [dataSource]="data"
+           [taskFields]="taskSettings"
+           [timelineSettings]="timelineView"
+           [columns]="columnSettings">
+</ejs-gantt>
